[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteora-client"
version = "0.1.0"
description = "Python SDK for the Meteora weather API."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Efe Biskin", email = "efebskn@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["httpx>=0.25"]
keywords = ["weather", "api", "meteora", "open-meteo", "client", "sdk"]

[project.urls]
Homepage = "https://github.com/efebiskin/meteora"

[tool.setuptools.packages.find]
include = ["meteora_client*"]
